# fysvm

./: README.md  pyproject.toml
examples/: basic_usage.py  explain_predictions.py
src/fysvm/: __init__.py  rule_svm.py
tests/: test_rule_svm.py
